@@ -1,3 +1,6 @@
+	* fix issues with missing exported symbols when building dll
+	* fix division by zero bug in edge case while connecting peers
+
 1.0.4 release
 
 	* fix bug in python binding for file_progress on torrents with no metadata
